[gd_scene load_steps=9 format=3 uid="uid://c2kp6ygjh3af8"]

[ext_resource type="Material" uid="uid://cw8kovgeqm575" path="res://Assets/Resource/Shaders/black_white_material.tres" id="1_yiedl"]
[ext_resource type="Theme" uid="uid://n3ns3n53r5ve" path="res://Assets/Resource/Themes/pixel/pixel_theme.tres" id="2_kki64"]
[ext_resource type="Script" path="res://Main/Components/Settings/popup.gd" id="3_lrvv2"]
[ext_resource type="Texture2D" uid="uid://bs0du80gxdubl" path="res://Assets/Textures/ui/app.png" id="4_3seti"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v50uh"]
texture = ExtResource("4_3seti")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[sub_resource type="Animation" id="Animation_wqnrk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.501961)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_q8dnq"]
resource_name = "open"
length = 0.1
step = 0.005
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.005),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.501961)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qs2n0"]
_data = {
"RESET": SubResource("Animation_wqnrk"),
"open": SubResource("Animation_q8dnq")
}

[node name="Popup" type="Control"]
material = ExtResource("1_yiedl")
layout_mode = 3
anchors_preset = 0
offset_right = 304.0
offset_bottom = 540.0
mouse_filter = 2
theme = ExtResource("2_kki64")
script = ExtResource("3_lrvv2")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.501961)
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 20.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
use_parent_material = true
layout_mode = 0
offset_top = 220.0
offset_right = 304.0
offset_bottom = 300.0

[node name="PopupPanel" type="Control" parent="CenterContainer"]
use_parent_material = true
custom_minimum_size = Vector2(160, 80)
layout_mode = 2

[node name="Panel" type="Panel" parent="CenterContainer/PopupPanel"]
clip_children = 2
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="CenterContainer/PopupPanel/Panel"]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PopupPanel/Panel"]
use_parent_material = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -19.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = -1

[node name="AcceptButton" type="Button" parent="CenterContainer/PopupPanel/Panel/HBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FlatLineButton"
text = "Accept"

[node name="CancelButton" type="Button" parent="CenterContainer/PopupPanel/Panel/HBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FlatLineButton"
text = "Cancel"

[node name="State" type="Label" parent="CenterContainer/PopupPanel"]
use_parent_material = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -24.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Are you sure?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="CenterContainer/PopupPanel"]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_v50uh")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qs2n0")
}

[connection signal="pressed" from="CenterContainer/PopupPanel/Panel/HBoxContainer/AcceptButton" to="." method="_on_accept_button_pressed"]
[connection signal="pressed" from="CenterContainer/PopupPanel/Panel/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
